--- a/src/App.css
+++ b/src/App.css
@@ -19,44 +19,55 @@ button{
 }
 
 .card-container {
-  max-width: 725px;
-  margin: auto;
+  width: 70%;
   background: #f6f6f6;
   -webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
   -moz-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
-   box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
-   border-radius: 5px ;
-   padding: 40px 50px 30px;
-   max-height: 420px;
-
+  box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
+  border-radius: 5px ;
+  padding: 40px 50px 30px;
+  max-height: 720px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
 }
-
-.view-button {
+  
+  .view-button {
   border-radius: 5px;
   background: #fff;
   color: #007AE6;
   border: none;
-  -webkit-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
-  -moz-box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
-   box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
-   padding: 15px 30px;
-   font-size:16px;
-   margin-top:20px;
-}
-
-.view-button:active {
+  -webkit-box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
+  -moz-box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
+  padding: 15px 30px;
+  font-size: 16px;
+  margin-top: 0px;
+  }
+  
+  .view-button:active {
   background-color: #FCBA02;
   color: #fff;
-}
-.view-button:focus {
+  }
+  
+  .view-button:focus {
   background-color: #FCBA02;
   color: #fff;
-}
-.selection {
-  display: flex;
-  justify-content: space-between;
-  max-width: 500px;
-  margin: auto;
-  margin-top: 40px;
-}
+  }
+  
+  .selection {
+    margin-top: 20px;
+    display: flex;
+    width: 400px;
+    justify-content: space-between;
+  }
+  .col-sm-10{
+    height: 100vh;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
