--- a/src/components/CurrentTicket/CurrentTicket.css
+++ b/src/components/CurrentTicket/CurrentTicket.css
@@ -1,59 +1,62 @@
 .current-ticket {
-  max-height: 420px;
-  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
   overflow-y: scroll;
-  padding-right: 25px;
-  position: relative;
 }
 
-.current-ticket p {
-  text-align: left;
-  color: #707070;
-  margin: 10px 0;
-}
-
-.current-ticket p span {
-  color: #959595;
-  display: inline-block;
-  margin-left: 15px;
-}
-
-.current-ticket .individual-ticket {
-  position: relative;
-  margin: 20px 0;
-}
-
-.current-ticket .close-ticket {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin-top: 0;
-  cursor: pointer;
-}
-
-.current-ticket::-webkit-scrollbar {
-  width: 7px;
-}
-
-.current-ticket::-webkit-scrollbar-thumb {
-  background-color: #5e5e5e;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-.current-ticket::-webkit-scrollbar-track {
-  background-color: #f5f5f5;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
-.current-ticket::before {
-  content: attr(data-alert);
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 9999;
+.ticket-section {
+  width: 23%;
   padding: 10px;
-  color: white;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  overflow-y: auto;
+}
+.ticket-section h3 {
   text-align: center;
+}
+
+.individual-ticket {
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+  position: relative; /* add position relative */
+  padding-right: 30px;
+  font: 15px;
+}
+
+.delete-ticket {
+  all: unset;
+  position: absolute;
+  top: 15px;  
+  right: 15px;
+  transform: translate(50%, -50%);
+  cursor: pointer; 
+}
+
+p {
+  margin: 0;
+  font-size: 14px;
+  line-height:1;
+}
+
+span {
   font-weight: bold;
+  
+}
+.Modal {
+  background-color: red;
+  height: 60%;
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
