--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -172,5 +172,18 @@
     font-weight: bold;
     font-size: 12px;
   }
+  .progress-bar {
+    height: 8px;
+  }
   
+  .progress-bar__fill {
+    border-radius: 8px;
+  }
   
+  .progress-bar__label {
+    font-size: 12px;
+    font-weight: bold;
+  }
+  .title{
+    font-size: 16px;
+  }
