--- a/src/components/sideBar/sideBar.css
+++ b/src/components/sideBar/sideBar.css
@@ -11,8 +11,14 @@
   box-shadow: 5px 0px 5px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-}
 
+
+}
+@media screen and (max-width: 900px) {
+  .menu {
+    display: none;
+  }
+}
 
 .logo {
   display: flex;
