--- a/src/components/sideBar/sideBar.css
+++ b/src/components/sideBar/sideBar.css
@@ -19,6 +19,11 @@
     display: none;
   }
 }
+@media screen and (max-width: 1200px) {
+  .sidebar{
+    display: none;
+  }
+}
 
 .logo {
   display: flex;
