--- a/src/components/CurrentTicket/CurrentTicket.css
+++ b/src/components/CurrentTicket/CurrentTicket.css
@@ -88,6 +88,7 @@ span {
   padding-right: 30px;
   font: 15px;
   background-color: rgb(255, 117, 117);
+  min-width:150px;
 }
 .high {
   border: 1px solid black;
@@ -98,6 +99,7 @@ span {
   padding-right: 30px;
   font: 15px;
   background-color: orange;
+  min-width:150px;
 }
 .medium {
   border: 1px solid black;
@@ -108,6 +110,7 @@ span {
   padding-right: 30px;
   font: 15px;
   background-color: yellow;
+  min-width:150px;
 }
 .low {
   border: 1px solid black;
@@ -118,4 +121,5 @@ span {
   padding-right: 30px;
   font: 15px;
   background-color: green;
+  min-width:150px;
 }
