--- a/src/components/LoadingScreen/LoadingScreen.css
+++ b/src/components/LoadingScreen/LoadingScreen.css
@@ -1,13 +1,18 @@
 .loading-screen {
+    height: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100%;
     background-color: black;
+    opacity: 1;
+    transition: opacity 2s ease-out; /* Change the duration to 2s */
   }
   
   .logo {
-    width: 200px; // Replace with your own logo width
+    opacity: 0;
+    transition: opacity 1s ease-out, filter 1s ease-out;
+    filter: blur(10px);
+    max-width: 200px; 
   }
   
